# bazel-repro

./: .gitignore  README.md
bundle-dir/: .bazelrc  BUILD  Info.plist  README.md
bundle-dir/subdir/: BUILD  helper.bzl
tulsi-local-repo/: README.md  WORKSPACE
tulsi-local-repo/app/: AppDelegate.m  BUILD.bazel  Info.plist
tulsi-local-repo/local/: BUILD.bazel  WORKSPACE
tulsi-local-repo/local/mylib/: MyLib.h  MyLib.m
tulsi-local-repo/tulsi-local.tulsiproj/: dflems.tulsiconf-user  project.tulsiconf
tulsi-local-repo/tulsi-local.tulsiproj/Configs/: cfg.tulsigen
watch-armv7k/: BUILD  README.md
watch-armv7k/src/: cfile.c
